feat: Rename vim distro, move install to base

--- a/roles/base/vars/Archlinux.yml
+++ b/roles/base/vars/Archlinux.yml
@@ -17,4 +17,4 @@ rename_package: perl-rename
 ruby_rake_package: ruby-rake
 sftp_path: /usr/lib/ssh/sftp-server
 sudo_group: wheel
-vim_package: gvim
+vim_package: neovim
