--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -8,6 +8,14 @@
     name: ansible
     state: present
 
+- name : Create user .local/bin
+  tags: packages,bat
+  file:
+    dest:  "{{ home_dir }}/.local/bin"
+    state: directory
+    mode: 0700
+    owner: "{{ user }}"
+
 - block:
   - import_tasks: software/repos.yml
   - import_tasks: software/dev.yml
