--- a/roles/base/vars/Ubuntu.yml
+++ b/roles/base/vars/Ubuntu.yml
@@ -18,3 +18,4 @@ ruby_rake_package: rake
 sftp_path: /usr/lib/openssh/sftp-server
 sudo_group: sudo
 vim_package: neovim
+ctags_package: exuberant-ctags
