--- a/roles/base/tasks/software/cleanup.yml
+++ b/roles/base/tasks/software/cleanup.yml
@@ -1,5 +1,6 @@
 - name: package cleanup | remove unneeded packages (debian, ubuntu, etc)
   tags: cleanup,packages,system,settings
+  become: true
   package:
     state: absent
     name:
