--- a/roles/base/tasks/software/repos.yml
+++ b/roles/base/tasks/software/repos.yml
@@ -7,23 +7,23 @@
       line: "IgnorePkg   = ansible linux linux-headers linux-lts linux-lts-headers"
   when: ansible_distribution == "Archlinux"
 
-- name: repositories | add sources.list for debian hosts
-  tags: non-free,repositories
-  become: yes
-  copy:
-    src: distribution_packages/debian_sources.list
-    dest: /etc/apt/sources.list
-    backup: yes
-    mode: 0664
-  when: ansible_distribution == "Debian"
+# - name: repositories | add sources.list for debian hosts
+#   tags: non-free,repositories
+#   become: yes
+#   copy:
+#     src: distribution_packages/debian_sources.list
+#     dest: /etc/apt/sources.list
+#     backup: yes
+#     mode: 0664
+#   when: ansible_distribution == "Debian"
 
-- name: repositories | add debian-backports
-  tags: backports,repositories
-  become: yes
-  apt_repository:
-    repo: deb http://deb.debian.org/debian buster-backports main
-    filename: debian-backports
-  when: ansible_distribution == "Debian"
+# - name: repositories | add debian-backports
+#   tags: backports,repositories
+#   become: yes
+#   apt_repository:
+#     repo: deb http://deb.debian.org/debian buster-backports main
+#     filename: debian-backports
+#   when: ansible_distribution == "Debian"
 
 - name: repositories | install package management tools (debian-based)
   tags: packages,system,settings
