--- a/roles/base/tasks/software/util.yml
+++ b/roles/base/tasks/software/util.yml
@@ -32,6 +32,7 @@
       - wget
       - whois
       - zsh
+      - unzip
 
 - name: base | utilities | install man-pages (arch)
   tags: packages,system,settings
