fix(tmux): Set status align to left

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -157,7 +157,7 @@ set-window-option -g window-status-current-format "#[fg=${gray},bg=${dark_purple
 set-option -g status-style "bg=${gray},fg=${white}"
 set-option -g status-left "${status_icon}"
 set-option -g status-right "${status_battery}${status_local_ip}${status_public_ip}${status_time}"
-
+set-option -g status-justify left
 
 
 
