fix(tmux): Change status interval to 5s

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -158,7 +158,7 @@ set-option -g status-style "bg=${gray},fg=${white}"
 set-option -g status-left "${status_icon}"
 set-option -g status-right "${status_battery}${status_local_ip}${status_public_ip}${status_time}"
 set-option -g status-justify left
-
+set-option -g status-interval 5
 
 
 # ============================
