fix(tmux): Switch status emoji to Nerd Fonts

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -123,8 +123,8 @@ red='#ff5555'
 pink='#ff79c6'
 yellow='#f1fa8c'
 
-status_icon="☢"
-status_icon_off="💤"
+status_icon=" "
+status_icon_off="鈴"
 status_sep_left=""
 status_sep_right=""
 status_flags="#{?window_flags,#[fg=${dark_purple}]#{window_flags},}"
@@ -134,9 +134,9 @@ status_icon="#[bg=${green},fg=${dark_gray}]#{?client_prefix,#[bg=${yellow}],} ${
 status_icon_local_off="#[bg=${dark_purple},fg=${dark_gray}]#{?client_prefix,#[bg=${yellow}],} ${status_icon_off} #[fg=${dark_purple},bg=${gray}]#{?client_prefix,#[fg=${yellow}],}${status_sep_left}"
 
 status_battery="#[fg=${orange},bg=${gray},nobold,nounderscore,noitalics]${status_sep_right}#[fg=${gray},bg=${orange}] #(~/.tmux/functions/battery.sh) "
-status_local_ip="#[fg=${pink},bg=${orange},nobold,nounderscore,noitalics]${status_sep_right}#[fg=${gray},bg=${pink}] 💻#(~/.tmux/functions/ip_local.sh) "
-status_public_ip="#[fg=${cyan},bg=${pink},nobold,nounderscore,noitalics]${status_sep_right}#[fg=${gray},bg=${cyan}] 🌎#(~/.tmux/functions/ip_public.sh) "
-status_time="#[fg=${light_purple},bg=${cyan},nobold,nounderscore,noitalics]${status_sep_right}#[fg=${gray},bg=${light_purple}] 📅%d-%m %R "
+status_local_ip="#[fg=${pink},bg=${orange},nobold,nounderscore,noitalics]${status_sep_right}#[fg=${gray},bg=${pink}]  #(~/.tmux/functions/ip_local.sh) "
+status_public_ip="#[fg=${cyan},bg=${pink},nobold,nounderscore,noitalics]${status_sep_right}#[fg=${gray},bg=${cyan}]  #(~/.tmux/functions/ip_public.sh) "
+status_time="#[fg=${light_purple},bg=${cyan},nobold,nounderscore,noitalics]${status_sep_right}#[fg=${gray},bg=${light_purple}]  %d-%m %R "
 # =====================================
 # ===    Appearence and status bar  ===
 # ======================================
