fix(tmux): Turn off activity messages

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -13,7 +13,7 @@ setw -g automatic-rename on
 set-option -g set-titles on
 setw -g aggressive-resize on
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off # stop notifications
 
 # Change prefix key to C-a, easier to type, same to "screen"
 unbind C-b
